# tams_360_scan

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: bundle_tags.yaml  settings.yaml  settings_gitarre.yaml  tags.yaml  tags_gitarre.yaml
launch/: continuous_detection.launch  single_image_client.launch  single_image_server.launch
script/: calibration_bundle.py  convert_mesh.py  convert_mesh2.py
