<?xml version="1.0"?>
<package format="2">
  <name>tams_360_scan</name>
  <version>0.0.0</version>
  <description>The tams_360_scan package</description>

  <maintainer email="liang@informatik.uni-hamburg.de">Hongzhuo Liang</maintainer>

  <license>MIT</license>
  <author >Hongzhuo Liang</author>

  <exec_depend>tams_camera_config</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
